--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.0.5",
     "@prisma/client": "5.13.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
