[ADD] json web token, ademas de relacion a tabla genero

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ PORT=3000
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://admin:admin@localhost:5432/server"
+#DATABASE_URL="postgresql://class_room_db_owner:QyL3IcNuDhr4@ep-orange-poetry-a5z1ifzg-pooler.us-east-2.aws.neon.tech/class_room_db?sslmode=require"
