--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@elysiajs/swagger": "^1.0.5",
     "@prisma/client": "5.13.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
-    "elysia": "latest"
+    "elysia": "latest",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "bun-types": "latest",
